--- a/klickhouse_derive/Cargo.toml
+++ b/klickhouse_derive/Cargo.toml
@@ -3,6 +3,10 @@ name = "klickhouse_derive"
 version = "0.1.0"
 authors = ["Protryon <max.bruce12@gmail.com>"]
 edition = "2018"
+license = "GPL-3.0-or-later"
+repository = "https://github.com/Protryon/klickhouse"
+description = "Rust crate for accessing Clickhouse"
+keywords = [ "clickhouse", "database", "tokio", "sql" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
