--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -21,16 +21,20 @@ chrono-tz = "0.5"
 futures = "0.3"
 serde = "1.0"
 tokio-stream = "0.1"
+lz4 = { version = "1.23", optional = true }
 klickhouse_derive = { version = "=0.1.0", optional = true, path = "../klickhouse_derive" }
+cityhash-rs = "1.0"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 klickhouse_derive = { version = "0.1", path = "../klickhouse_derive" }
+
 [features]
-default = ["uuid", "derive"]
+default = ["uuid", "derive", "compression"]
 derive = ["klickhouse_derive"]
+compression = ["lz4"]
 
 [build-dependencies]
 rustc_version = "0.3"
