--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -14,12 +14,11 @@ tokio = { version = "1", features = ["io-util", "net", "sync", "rt"] }
 async-trait = "0.1"
 anyhow = "1.0"
 log = "0.4"
-indexmap = { version = "1.6", features = ["serde"] }
-uuid = { version = "0.8", features = ["v4", "serde"], optional = true }
+indexmap = { version = "1.6" }
+uuid = { version = "0.8", features = ["v4"], optional = true }
 chrono = "0.4"
 chrono-tz = "0.5"
 futures = "0.3"
-serde = "1.0"
 tokio-stream = "0.1"
 lz4 = { version = "1.23", optional = true }
 klickhouse_derive = { version = "=0.2.0", optional = true, path = "../klickhouse_derive" }
@@ -28,7 +27,6 @@ cityhash-rs = "1.0"
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.6"
-serde = { version = "1.0", features = ["derive"] }
 
 [features]
 default = ["uuid", "derive", "compression"]
