relicense to MIT + APACHE

--- a/klickhouse_derive/Cargo.toml
+++ b/klickhouse_derive/Cargo.toml
@@ -3,7 +3,7 @@ name = "klickhouse_derive"
 version = "0.2.1"
 authors = ["Protryon <max.bruce12@gmail.com>"]
 edition = "2018"
-license = "GPL-3.0-or-later"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/Protryon/klickhouse"
 description = "proc-macro crate for klickhouse"
 keywords = [ "clickhouse", "database", "tokio", "sql" ]
