--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -3,7 +3,7 @@ name = "klickhouse"
 version = "0.2.1"
 authors = ["Protryon <max.bruce12@gmail.com>"]
 edition = "2018"
-license = "GPL-3.0-or-later"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/Protryon/klickhouse"
 description = "Klickhouse is a pure Rust SDK for working with Clickhouse with the native protocol in async environments with minimal boilerplate and maximal performance."
 keywords = [ "clickhouse", "database", "tokio", "sql" ]
