--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -15,7 +15,7 @@ async-trait = "0.1"
 thiserror = "1.0"
 log = "0.4"
 indexmap = { version = "1.6" }
-uuid = { version = "0.8", features = ["v4"], optional = true }
+uuid = { version = "0.8", features = ["v4"] }
 chrono = "0.4"
 chrono-tz = "0.5"
 futures = "0.3"
@@ -29,7 +29,7 @@ tokio = { version = "1", features = ["full"] }
 env_logger = "0.6"
 
 [features]
-default = ["uuid", "derive", "compression"]
+default = ["derive", "compression"]
 derive = ["klickhouse_derive"]
 compression = ["lz4"]
 
