--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -23,6 +23,7 @@ tokio-stream = "0.1"
 lz4 = { version = "1.24", optional = true }
 klickhouse_derive = { version = "=0.5.0", optional = true, path = "../klickhouse_derive" }
 cityhash-rs = "1.0"
+bb8 = { version = "0.8", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
