--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "klickhouse"
-version = "0.5.1"
+version = "0.5.2"
 authors = ["Protryon <max.bruce12@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -24,6 +24,8 @@ lz4 = { version = "1.24", optional = true }
 klickhouse_derive = { version = "=0.5.0", optional = true, path = "../klickhouse_derive" }
 cityhash-rs = "1.0"
 bb8 = { version = "0.8", optional = true }
+refinery-core = { version = "0.8", optional = true }
+time = { version = "0.3.5", features = ["parsing", "formatting"], optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
@@ -33,6 +35,7 @@ env_logger = "0.9"
 default = ["derive", "compression"]
 derive = ["klickhouse_derive"]
 compression = ["lz4"]
+refinery = ["refinery-core", "time"]
 
 [build-dependencies]
 rustc_version = "0.3"
