--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "klickhouse"
-version = "0.6.6"
+version = "0.7.0"
 authors = ["Protryon <max.bruce12@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -21,10 +21,11 @@ chrono-tz = "0.6"
 futures = "0.3"
 tokio-stream = "0.1"
 lz4 = { version = "1.24", optional = true }
-klickhouse_derive = { version = "=0.6.2", optional = true, path = "../klickhouse_derive" }
+klickhouse_derive = { version = "=0.7.0", optional = true, path = "../klickhouse_derive" }
 cityhash-rs = "1.0"
 bb8 = { version = "0.8", optional = true }
-refinery-core = { version = "0.8", optional = true }
+# must be locked due to transmute
+refinery-core = { version = "=0.8.6", optional = true }
 time = { version = "0.3.5", features = ["parsing", "formatting"], optional = true }
 compiler-tools = "0.1.7"
 compiler-tools-derive = "0.1.7"
@@ -34,7 +35,7 @@ tokio = { version = "1", features = ["full"] }
 env_logger = "0.9"
 
 [features]
-default = ["derive", "compression", "bb8"]
+default = ["derive", "compression"]
 derive = ["klickhouse_derive"]
 compression = ["lz4"]
 refinery = ["refinery-core", "time"]
