--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "klickhouse"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Protryon <max.bruce12@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -31,16 +31,19 @@ time = { version = "0.3.5", features = ["parsing", "formatting"], optional = tru
 compiler-tools = "0.1.7"
 compiler-tools-derive = "0.1.7"
 rust_decimal = { version = "1.30", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.10"
 
 [features]
-default = ["derive", "compression"]
+default = ["derive", "compression", "serde"]
 derive = ["klickhouse_derive"]
 compression = ["lz4"]
 refinery = ["refinery-core", "time"]
+serde = ["dep:serde", "serde_json"]
 
 [build-dependencies]
 rustc_version = "0.3"
