--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -33,6 +33,7 @@ compiler-tools-derive = "0.1.7"
 rust_decimal = { version = "1.30", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
+tokio-rustls = { version = "0.24.1", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
@@ -44,6 +45,7 @@ derive = ["klickhouse_derive"]
 compression = ["lz4"]
 refinery = ["refinery-core", "time"]
 serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde"]
+tls = ["tokio-rustls"]
 
 [build-dependencies]
 rustc_version = "0.3"
