Document the execution of tests
- Add a section in the README with instructions on the execution of integration tests.
- Make the test server address configurable.
- Add rustfmt.toml, which is required for rust-analyzer to trigger fmt.

--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -8,6 +8,11 @@ repository = "https://github.com/Protryon/klickhouse"
 description = "Klickhouse is a pure Rust SDK for working with Clickhouse with the native protocol in async environments with minimal boilerplate and maximal performance."
 keywords = [ "clickhouse", "database", "tokio", "sql" ]
 readme = "../README.md"
+autotests = false
+
+[[test]]
+name = "test"
+path = "tests/main.rs"
 
 [dependencies]
 tokio = { version = "1.21", features = ["io-util", "net", "sync", "rt", "macros"] }
