--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -53,6 +53,7 @@ serde_json = { version = "1.0", optional = true }
 tokio-rustls = { version = "0.24.1", optional = true }
 paste = "1.0.14"
 geo-types = { version = "0.7.12", optional = true }
+rustc-hash = "1.1.0"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
