--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -42,6 +42,7 @@ rust_decimal = { version = "1.35", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 tokio-rustls = { version = "0.26", optional = true }
+rustls-pki-types = { version = "1.4", optional = true }
 paste = "1.0"
 geo-types = { version = "0.7", optional = true}
 
@@ -56,7 +57,7 @@ compression = ["lz4"]
 geo-types = ["dep:geo-types"]
 refinery = ["refinery-core", "time"]
 serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde"]
-tls = ["tokio-rustls"]
+tls = ["tokio-rustls", "rustls-pki-types"]
 
 [build-dependencies]
 rustc_version = "0.4"
