--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -18,6 +18,10 @@ all-features = true
 name = "test"
 path = "tests/main.rs"
 
+[[example]]
+name = "pool"
+required-features = ["bb8"]
+
 [dependencies]
 tokio = { version = "1.37", features = ["io-util", "net", "sync", "rt", "macros"] }
 async-trait = "0.1"
@@ -37,8 +41,8 @@ bb8 = { version = "0.8", optional = true }
 # must be locked due to transmute
 refinery-core = { version = "=0.8.13", optional = true }
 time = { version = "0.3", features = ["parsing", "formatting"], optional = true }
-compiler-tools = "0.1"
-compiler-tools-derive = "0.1"
+compiler-tools = "0.2"
+compiler-tools-derive = "0.2"
 rust_decimal = { version = "1.35", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
