--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -29,8 +29,11 @@ thiserror = "1.0"
 log = "0.4"
 indexmap = { version = "2.2" }
 uuid = { version = "1.8", features = ["v4"] }
-chrono = "0.4"
-chrono-tz = "0.8"
+chrono = { version = "0.4", default-features = false, features = [
+    "std",
+    "now"
+] }
+chrono-tz = "0.9"
 futures = "0.3"
 tokio-stream = "0.1"
 libc = "0.2"
