--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -52,7 +52,7 @@ paste = "1.0"
 geo-types = { version = "0.7", optional = true}
 
 [dev-dependencies]
-tokio = { version = "1.37", features = ["full"] }
+tokio = { version = "1.37", features = ["rt-multi-thread"] }
 env_logger = "0.11"
 
 [features]
