--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -24,7 +24,7 @@ required-features = ["bb8"]
 
 [dependencies]
 tokio = { version = "1.37", features = ["io-util", "net", "rt", "macros"] }
-async-trait = "0.1"
+async-trait = { version = "0.1", optional = true }
 thiserror = "1.0"
 log = "0.4"
 indexmap = { version = "2.2" }
@@ -36,7 +36,7 @@ tokio-stream = "0.1"
 lz4 = { version = "1.24", optional = true }
 klickhouse_derive = { version = "=0.13.0", optional = true, path = "../klickhouse_derive" }
 cityhash-rs = "1.0"
-bb8 = { version = "0.8", optional = true }
+bb8 = { version = "0.9.0", optional = true }
 # must be locked due to transmute
 refinery-core = { version = "=0.8.14", optional = true }
 time = { version = "0.3", features = ["parsing", "formatting"], optional = true }
@@ -59,7 +59,7 @@ default = ["derive", "compression", "serde"]
 derive = ["klickhouse_derive"]
 compression = ["lz4"]
 geo-types = ["dep:geo-types"]
-refinery = ["refinery-core", "time"]
+refinery = ["refinery-core", "time", "dep:async-trait"]
 serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde"]
 tls = ["tokio-rustls", "rustls-pki-types"]
 bb8 = ["dep:bb8"]
