refactor: bfloat16 feature flag

--- a/klickhouse/Cargo.toml
+++ b/klickhouse/Cargo.toml
@@ -49,21 +49,22 @@ tokio-rustls = { version = "0.26", optional = true }
 rustls-pki-types = { version = "1.12", optional = true }
 paste = "1.0"
 geo-types = { version = "0.7", optional = true}
-half = "2.4"
+half = { version = "2.4", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.45", features = ["rt-multi-thread"] }
 env_logger = "0.11"
 
 [features]
-default = ["derive", "compression", "serde"]
+default = ["derive", "compression", "serde", "bfloat16"]
 derive = ["klickhouse_derive"]
 compression = ["lz4"]
 geo-types = ["dep:geo-types"]
 refinery = ["refinery-core", "time", "dep:async-trait"]
-serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde", "half/serde"]
+serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde", "half?/serde"]
 tls = ["tokio-rustls", "rustls-pki-types"]
 bb8 = ["dep:bb8"]
+bfloat16 = ["dep:half"]
 
 [build-dependencies]
 rustc_version = "0.4"
